--- a/config/public.yml
+++ b/config/public.yml
@@ -2,4 +2,8 @@ default:
   collection: quills
   solr_core: quills
   tei_solr_xsl: scripts/solr_transform_tei.xsl
-
+  threads: 20
+development:
+  solr_path: https://cdrhdev1.unl.edu/solr
+production:
+  solr_path: https://cors1601.unl.edu/solr
